tests/sksl/errors/UnsupportedGLSLIdentifiers.glsl
### Compilation failed:

error: 1: unknown identifier 'gl_FragCoord'
error: 2: unknown identifier 'gl_FragColor'
2 errors
